@@ -3,6 +3,7 @@ Changes for 3.2.11rc1
 New features:
 
 Bug fixes:
+..F....... [ZBXNEXT-1421] added sortorder parameter for service dependencies for sorting purposes (miks)
 ..F....... [ZBX-12897] fixed error causing empty list in popup window when opened from page having host group filter (gcalenko)
 ..F....... [ZBX-12912] fixed error handling on graph form for preview image (gcalenko)
 A.F....... [ZBX-12655] added filter on event details page to show messages sent to users only from same groups (gcalenko)
@@ -566,6 +567,7 @@ Changes for 3.0.14rc1
 New features:
 
 Bug fixes:
+..F....... [ZBXNEXT-1421] added sortorder parameter for service dependencies for sorting purposes (miks)
 ..F....... [ZBX-12897] fixed error causing empty list in popup window when opened from page having host group filter (gcalenko)
 ..F....... [ZBX-12912] fixed error handling on graph form for preview image (gcalenko)
 ....I..... [ZBX-12232] fixed mysql m4 configuration script for mariadb C connector (abs)
